[project]
name = "live-coding-langchain-langgraph"
version = "0.1.0"
description = "Live coding LangChain and LangGraph"
authors = [
    { name = "Sergio Ramos", email = "sergio.b.snp@gmail.com" }
]
dependencies = [
    "langchain==1.2.10",
    "langchain-openai==1.1.9",
    "python-dotenv==1.2.1",
    "langchain-google-genai==4.2.0",
    "tavily-python==0.7.21",
    "langchain-core>=1.2.13",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
